--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "start": "npx webpack --config webpack.config.js",
     "build": "NODE_ENV=production npx webpack --config webpack.config.js",
     "dev": "npx webpack --config webpack.config.js --watch",
+    "dev2": "npx webpack --config webpackdev.config.js --watch",
     "docs": "node ./node_modules/@cocreate/docs/src/index.js"
   },
   "repository": {
@@ -60,7 +61,8 @@
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.24.4",
     "webpack-cli": "^4.5.0",
-    "webpack-log": "^3.0.1"
+    "webpack-log": "^3.0.1",
+    "xmldom": "^0.6.0"
   },
   "dependencies": {
     "@cocreate/docs": "^1.0.3"
