--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "build": "NODE_ENV=production npx webpack --config webpack.config.js",
     "dev": "npx webpack --config webpack.config.js --watch",
     "dev2": "npx webpack --config webpackdev.config.js --watch",
+    "test": "npx webpack --config webpacktest.config.js --watch",
     "docs": "node ./node_modules/@cocreate/docs/src/index.js"
   },
   "repository": {
