--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "html5-framework",
     "javascript-framework"
   ],
-  "publishConfig": {
-    "access": "public"
-  },
+  "publishConfig": { "access": "public" },
   "scripts": {
     "start": "npx webpack --config webpack.config.js",
     "build": "NODE_ENV=production npx webpack --config webpack.config.js",
@@ -38,9 +36,7 @@
   },
   "author": "CoCreate LLC",
   "license": "SEE LICENSE",
-  "bugs": {
-    "url": "https://github.com/CoCreate-app/CoCreate-domText/issues"
-  },
+  "bugs": { "url": "https://github.com/CoCreate-app/CoCreate-domText/issues" },
   "homepage": "https://cocreate.app/docs/domText",
   "funding": {
     "type": "GitHub Sponsors ❤",
@@ -67,7 +63,5 @@
     "webpack-log": "^3.0.1",
     "xmldom": "^0.6.0"
   },
-  "dependencies": {
-    "@cocreate/docs": "latest"
-  }
+  "dependencies": { "@cocreate/docs": "^1.0.0" }
 }
